--- a/NeighboursApp.Test/Neighbours.Test.csproj
+++ b/NeighboursApp.Test/Neighbours.Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Neighbours\neighbours.csproj" />
+    <ProjectReference Include="..\NeighboursApp\neighbours.csproj" />
   </ItemGroup>
 
 </Project>
